iptables.rules
# Generated by iptables-save v1.4.21 on Thu Dec  3 17:30:18 2015
*filter
:INPUT ACCEPT [38020:18739123]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [28578:80891154]
-A INPUT -s 162.222.72.0/24 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 162.222.72.0/24 -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -s 162.222.72.0/24 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 162.222.74.0/24 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 162.222.74.0/24 -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -s 162.222.74.0/24 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j DROP
-A INPUT -p tcp -m tcp --dport 3306 -j DROP
-A INPUT -p tcp -m tcp --dport 8080 -j DROP
COMMIT
# Completed on Thu Dec  3 17:30:18 2015
